# jvm-class-dumper

./: .gitmodules  README.md
b_agent/: Cargo.toml
b_agent/src/: console.rs  error.rs  injector.rs  jvm.rs  lib.rs
b_agent/src/bridge/: cache.rs  mod.rs
b_agent/src/client/: mod.rs
b_client/: .gitignore  build.gradle  settings.gradle
b_client/gradle/wrapper/: gradle-wrapper.properties
b_client/src/main/java/io/github/brqnko/client/: Client.java
b_client/src/main/java/io/github/brqnko/retransformer/: Retransformer.java
b_client/src/main/java/net/minecraft/client/entity/: EntityPlayerSP.java
b_client/src/main/java/net/minecraft/entity/: EntityLivingBase.java
